@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>24</maven.compiler.source>
+        <maven.compiler.target>24</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jmh.version>1.36</jmh.version>
         <rxjava.version>3.1.5</rxjava.version>
@@ -22,9 +22,12 @@
         <reactor-netty.version>1.0.35</reactor-netty.version>
         <spring.version>5.3.29</spring.version>
         <vertx.version>4.4.4</vertx.version>
-        <lombok.version>1.18.34</lombok.version>
+        <lombok.version>1.18.38</lombok.version>
         <toxiproxy.version>1.18.3</toxiproxy.version>
         <junit.version>5.9.3</junit.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <java.version>24</java.version>
     </properties>
 
     <dependencies>
@@ -162,6 +165,32 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <!--编译配置，指定开启 enable-preview -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <encoding>${maven.compiler.encoding}</encoding>
+                    <compilerArgs>
+                        <compilerArg>--enable-preview</compilerArg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <release>${java.version}</release>
+                    <meminitial>100m</meminitial>
+                    <maxmem>200m</maxmem>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
